# CExcel

./: .editorconfig  .gitignore  CMakeLists.txt  Table.cpp  main.cpp  rule.json
headers/: Table.h
xls2xlsx_Master/: CMakeLists.txt  main.cpp
